# CrewChief

./: .env.example  .gitignore  =0.47.0  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW_ISSUES.md  CONTRIBUTING.md  LESSONS_LEARNED.md  PRD.md  PREREQUISITES.md  README.md  README_TUI.md  REVIEW_SUMMARY.md  TUI.md  VALIDATION_REPORT.md  index.js  license.md  package.json  pyproject.toml
crewchief/: __init__.py  cli.py  db.py  llm.py  models.py  settings.py
crewchief/prompts/: garage_summary.txt  maintenance_suggestions.txt  system_crewchief.txt  track_prep.txt
crewchief/tui/: __init__.py  app.py  theme.py
crewchief/tui/screens/: __init__.py  ai_panel.py  car_form.py  costs_view.py  dashboard.py  help_screen.py  maintenance_form.py  maintenance_log.py  modals.py  parts_form.py  parts_manager.py  vehicle_detail.py
crewchief/tui/services/: __init__.py  ai_service.py  garage_service.py  maintenance_service.py  parts_service.py
crewchief/tui/widgets/: __init__.py  ascii_banner.py  help_footer.py  maintenance_table.py  parts_table.py  stats_panel.py  status_badge.py  vehicle_table.py
docker/: Dockerfile  docker-compose.yml
iac/: azure-template.json  main.tf  variables.tf
templates/: .cursorrules  .env.example  .gitignore  PLANNING.md  README.md  TASK.md
tests/: __init__.py  test_cli.py  test_db.py  test_llm.py  test_models.py
